remove index from bls data

--- a/notebooks/Storm_Database.ipynb
+++ b/notebooks/Storm_Database.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "1c12ea77",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,139 @@
     "from amazon_cred import ENDPOINT, PORT, USER, PASSWORD, DATABASE\n",
     "from cred import CENSUS_API_KEY\n",
     "from data_constants import NOAA_CSVFILES_URL, ZONE_COUNTY_CORR_URL, ZONE_COUNTY_CORR_CSV, TABLE_COLUMNS_NOAA\n",
-    "from data_constants import MIN_DAMAGE, BEGIN_YEAR, END_YEAR, STORM_CATEGORIES"
+    "from data_constants import MIN_DAMAGE, BEGIN_YEAR, END_YEAR, STORM_CATEGORIES, BLS_CPI_CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "49a10db8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>period</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>12</td>\n",
+       "      <td>256.974</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>11</td>\n",
+       "      <td>257.208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>10</td>\n",
+       "      <td>257.346</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>9</td>\n",
+       "      <td>256.759</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>8</td>\n",
+       "      <td>256.558</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>255</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>5</td>\n",
+       "      <td>256.394</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>256</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>4</td>\n",
+       "      <td>256.389</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>257</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>3</td>\n",
+       "      <td>258.115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>258</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>2</td>\n",
+       "      <td>258.678</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>259</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>1</td>\n",
+       "      <td>257.971</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>260 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     year  period    value\n",
+       "0    2019      12  256.974\n",
+       "1    2019      11  257.208\n",
+       "2    2019      10  257.346\n",
+       "3    2019       9  256.759\n",
+       "4    2019       8  256.558\n",
+       "..    ...     ...      ...\n",
+       "255  2020       5  256.394\n",
+       "256  2020       4  256.389\n",
+       "257  2020       3  258.115\n",
+       "258  2020       2  258.678\n",
+       "259  2020       1  257.971\n",
+       "\n",
+       "[260 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(BLS_CPI_CSV, index_col=False)\n",
+    "df = df.drop(columns=['Unnamed: 0'])\n",
+    "df.to_csv('bls')"
    ]
   },
   {
@@ -713,7 +845,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -727,7 +859,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
