add code to download BLS CPI data

--- a/notebooks/Storm_Database.ipynb
+++ b/notebooks/Storm_Database.ipynb
@@ -62,138 +62,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "49a10db8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>year</th>\n",
-       "      <th>period</th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>12</td>\n",
-       "      <td>256.974</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>11</td>\n",
-       "      <td>257.208</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>10</td>\n",
-       "      <td>257.346</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>9</td>\n",
-       "      <td>256.759</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>8</td>\n",
-       "      <td>256.558</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>255</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>5</td>\n",
-       "      <td>256.394</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>256</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>4</td>\n",
-       "      <td>256.389</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>257</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>3</td>\n",
-       "      <td>258.115</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>258</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>258.678</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>259</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>1</td>\n",
-       "      <td>257.971</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>260 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     year  period    value\n",
-       "0    2019      12  256.974\n",
-       "1    2019      11  257.208\n",
-       "2    2019      10  257.346\n",
-       "3    2019       9  256.759\n",
-       "4    2019       8  256.558\n",
-       "..    ...     ...      ...\n",
-       "255  2020       5  256.394\n",
-       "256  2020       4  256.389\n",
-       "257  2020       3  258.115\n",
-       "258  2020       2  258.678\n",
-       "259  2020       1  257.971\n",
-       "\n",
-       "[260 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(BLS_CPI_CSV, index_col=False)\n",
-    "df = df.drop(columns=['Unnamed: 0'])\n",
-    "df.to_csv('bls')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "e520f7f4",
    "metadata": {},
@@ -250,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "dc662104",
    "metadata": {},
    "outputs": [],
@@ -283,7 +151,39 @@
     "    return df\n",
     "\n",
     "def get_zone_county_corr_df():\n",
-    "    return download_zone_county_corr_file(ZONE_COUNTY_CORR_CSV)"
+    "    return download_zone_county_corr_file(ZONE_COUNTY_CORR_CSV)\n",
+    "\n",
+    "def download_bls_cpi_csv():\n",
+    "    headers = {'Content-type': 'application/json'}\n",
+    "    data = json.dumps({\"seriesid\": ['CUUR0000SA0'], # consumer price index (urban consumer)\n",
+    "                       \"startyear\":\"2000\", \"endyear\":\"2009\"})\n",
+    "    p = requests.post('https://api.bls.gov/publicAPI/v2/timeseries/data/', data=data, headers=headers)\n",
+    "    json_data = json.loads(p.text)\n",
+    "    df1 = pd.DataFrame(json_data['Results']['series'][0]['data'])\n",
+    "\n",
+    "    data = json.dumps({\"seriesid\": ['CUUR0000SA0'],\n",
+    "                       \"startyear\":\"2010\", \"endyear\":\"2019\"})\n",
+    "    p = requests.post('https://api.bls.gov/publicAPI/v2/timeseries/data/', data=data, headers=headers)\n",
+    "    json_data = json.loads(p.text)\n",
+    "    df2 = pd.DataFrame(json_data['Results']['series'][0]['data'])\n",
+    "\n",
+    "    data = json.dumps({\"seriesid\": ['CUUR0000SA0'],\n",
+    "                       \"startyear\":\"2020\", \"endyear\":\"2021\"})\n",
+    "    p = requests.post('https://api.bls.gov/publicAPI/v2/timeseries/data/', data=data, headers=headers)\n",
+    "    json_data = json.loads(p.text)\n",
+    "    df3 = pd.DataFrame(json_data['Results']['series'][0]['data'])\n",
+    "    df = pd.concat([df1, df2, df3], axis=0)\n",
+    "\n",
+    "    def clean(row):\n",
+    "        row['period'] = int(row['period'][1:]) # remove the M from period\n",
+    "        return row\n",
+    "    df = df.apply(clean, axis=1)\n",
+    "    df.drop(columns=['footnotes', 'latest', 'periodName'], inplace=True)\n",
+    "    df.to_csv('../data/bls_cpi.csv', index=False) # save it to csv, upload it to Github\n",
+    "    return df\n",
+    "\n",
+    "def get_bls_cpi():\n",
+    "    return pd.read_csv(BLS_CPI_CSV)"
    ]
   },
   {
