--- a/notebooks/siads_591_report.ipynb
+++ b/notebooks/siads_591_report.ipynb
@@ -26,9 +26,9 @@
     "# Step 0: Download this notebook and upload it to Google colab\n",
     "\n",
     "# Step 1: Download the Python code from Github\n",
-    "wget -q -nc https://github.com/ss-github-code/noaa_storm_analysis/archive/refs/heads/main.zip\n",
-    "unzip -q main.zip noaa_storm_analysis-main/*; mv noaa_storm_analysis-main/* .;rm -r noaa_storm_analysis-main\n",
-    "pip install -r requirements.txt"
+    "!wget -q -nc https://github.com/ss-github-code/noaa_storm_analysis/archive/refs/heads/main.zip\n",
+    "!unzip -q main.zip noaa_storm_analysis-main/*; mv noaa_storm_analysis-main/* .;rm -r noaa_storm_analysis-main\n",
+    "!pip install -r requirements.txt"
    ]
   },
   {
@@ -141,7 +141,7 @@
     "    \n",
     "    with outputPlotly:\n",
     "        title_event = 'storms'\n",
-    "        df_map, _, _ = get_storm_data(year)\n",
+    "        df_map, _, _ = get_storm_data(year, True)\n",
     "        map_columns = df_map.columns\n",
     "        if layers != 'All events':\n",
     "            df_map = df_map[df_map[layers]==True]\n",
@@ -172,7 +172,7 @@
     "                        color = color_col,     # TOTAL_DAMAGE or DAMAGE\n",
     "                        scope = 'usa') # set the scope to usa to automatically configure the \n",
     "                                       # map to display USA-centric data in an appropriate projection.\n",
-    "        fig.update_layout(title_text = f'<b>Total damage in $ from {title_event} in year {year}</b>',\n",
+    "        fig.update_layout(title_text = f'<b>Total damage (inflation adjusted) in $ from {title_event} in year {year}</b>',\n",
     "                          title_font_size=13, title_x=0.5, title_xanchor='center') # match font-size and location with Altair\n",
     "        fig.show()\n",
     "\n",
@@ -181,7 +181,7 @@
     "        print('Click on the legend to select events of a particular type.')\n",
     "        \n",
     "        # get the storm data from the database\n",
-    "        _, df_counties, df_county_details = get_storm_data(year)\n",
+    "        _, df_counties, df_county_details = get_storm_data(year, True)\n",
     "        titleStr = \"All events\"\n",
     "        if layers != 'All events':\n",
     "            df_counties = df_counties[df_counties[layers]==True]\n",
@@ -313,7 +313,7 @@
     "    output_map.clear_output()\n",
     "    output_charts.clear_output()\n",
     "    \n",
-    "    _, df_counties, _ = get_storm_data(year)\n",
+    "    _, df_counties, _ = get_storm_data(year, True)\n",
     "    df_counties = df_counties[df_counties['EVENT_TYPE'] == 'Wildfire']\n",
     "    df_counties.sort_values('TOTAL_DAMAGE', ascending=False, inplace=True)\n",
     "\n",
@@ -503,7 +503,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -517,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
