amend the noaa analysis

--- a/notebooks/noaa_storm_analysis.ipynb
+++ b/notebooks/noaa_storm_analysis.ipynb
@@ -191,6 +191,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6f79e335",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['TOTAL_DAMAGE', 'EVENT_TYPE', 'DURATION', 'population', 'num_estab',\n",
+       "       'annual_payroll', 'num_emp', 'num_non_emp_estb', 'non_emp_revenue',\n",
+       "       'rank_1_ind', 'rank_1_biz_val', 'rank_1_estab', 'rank_1_emp',\n",
+       "       'rank_2_ind', 'rank_2_biz_val', 'rank_2_estab', 'rank_2_emp',\n",
+       "       'rank_3_ind', 'rank_3_biz_val', 'rank_3_estab', 'rank_3_emp'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat1_df.columns"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5ff53134",
    "metadata": {},
@@ -216,6 +242,15 @@
     }
    ],
    "source": [
+    "def apply_scaling(df):\n",
+    "    for col in df:\n",
+    "        if col not in ['EVENT_TYPE', 'rank_1_ind', 'rank_2_ind', 'rank_3_ind']:\n",
+    "            scaler = StandardScaler()\n",
+    "            df[col] = scaler.fit_transform(df[col].values.reshape([-1,1]))\n",
+    "        else:\n",
+    "            continue\n",
+    "    return df\n",
+    "\n",
     "sns.set_theme(style=\"white\")\n",
     "\n",
     "lst_cols = ['population', 'num_estab', 'annual_payroll', 'num_emp', 'num_non_emp_estb', 'non_emp_revenue',\n",
@@ -224,7 +259,9 @@
     "            'rank_3_biz_val', 'rank_3_estab', 'rank_3_emp', 'DURATION', 'TOTAL_DAMAGE'\n",
     "           ]\n",
     "\n",
-    "df = cat1_df[lst_cols]\n",
+    "df = cat1_df[lst_cols].copy()\n",
+    "df = apply_scaling(df)\n",
+    "\n",
     "# Compute the correlation matrix\n",
     "corr = df.corr()\n",
     "# Generate a mask for the upper triangle\n",
@@ -262,7 +299,9 @@
     "            'rank_3_biz_val', 'rank_3_estab', 'rank_3_emp', \n",
     "            'Tornado_f_scale', 'Tornado_len', 'Tornado_width', 'DURATION', 'TOTAL_DAMAGE'\n",
     "           ]\n",
-    "df = cat2_df[lst_cols]\n",
+    "df = cat2_df[lst_cols].copy()\n",
+    "df = apply_scaling(df)\n",
+    "\n",
     "# Compute the correlation matrix\n",
     "corr = df.corr()\n",
     "# Generate a mask for the upper triangle\n",
@@ -300,7 +339,9 @@
     "            'rank_3_biz_val', 'rank_3_estab', 'rank_3_emp', 'DURATION', 'TOTAL_DAMAGE'\n",
     "           ]\n",
     "\n",
-    "df = cat3_df[lst_cols]\n",
+    "df = cat3_df[lst_cols].copy()\n",
+    "df = apply_scaling(df)\n",
+    "\n",
     "# Compute the correlation matrix\n",
     "corr = df.corr()\n",
     "# Generate a mask for the upper triangle\n",
@@ -324,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "608dda22",
    "metadata": {},
    "outputs": [
@@ -337,22 +378,22 @@
       "Dep. Variable:           TOTAL_DAMAGE   R-squared:                       0.014\n",
       "Model:                            OLS   Adj. R-squared:                  0.013\n",
       "Method:                 Least Squares   F-statistic:                     14.20\n",
-      "Date:                Fri, 17 Sep 2021   Prob (F-statistic):           8.06e-14\n",
-      "Time:                        23:37:30   Log-Likelihood:            -1.0904e+05\n",
-      "No. Observations:                5052   AIC:                         2.181e+05\n",
-      "Df Residuals:                    5046   BIC:                         2.181e+05\n",
+      "Date:                Sat, 18 Sep 2021   Prob (F-statistic):           8.06e-14\n",
+      "Time:                        18:34:51   Log-Likelihood:                -7133.2\n",
+      "No. Observations:                5052   AIC:                         1.428e+04\n",
+      "Df Residuals:                    5046   BIC:                         1.432e+04\n",
       "Df Model:                           5                                         \n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================\n",
       "==================================================================================\n",
       "                     coef    std err          t      P>|t|      [0.025      0.975]\n",
       "----------------------------------------------------------------------------------\n",
-      "Intercept       4.791e+07   9.84e+06      4.868      0.000    2.86e+07    6.72e+07\n",
-      "population       263.9607     52.851      4.994      0.000     160.349     367.572\n",
-      "DURATION        -598.8115    802.883     -0.746      0.456   -2172.811     975.188\n",
-      "rank_1_biz_val     2.4628      0.646      3.814      0.000       1.197       3.729\n",
-      "rank_2_biz_val     1.0788      1.606      0.672      0.502      -2.070       4.227\n",
-      "rank_3_biz_val   -21.6708      4.169     -5.198      0.000     -29.844     -13.497\n",
+      "Intercept      -9.541e-18      0.014  -6.82e-16      1.000      -0.027       0.027\n",
+      "population         0.2637      0.053      4.994      0.000       0.160       0.367\n",
+      "DURATION          -0.0105      0.014     -0.746      0.456      -0.038       0.017\n",
+      "rank_1_biz_val     0.1134      0.030      3.814      0.000       0.055       0.172\n",
+      "rank_2_biz_val     0.0256      0.038      0.672      0.502      -0.049       0.100\n",
+      "rank_3_biz_val    -0.3125      0.060     -5.198      0.000      -0.430      -0.195\n",
       "==================================================================================\n"
      ]
     }
@@ -360,8 +401,11 @@
    "source": [
     "import statsmodels.formula.api as smf\n",
     "\n",
+    "df = cat1_df[lst_cols].copy()\n",
+    "df = apply_scaling(df)\n",
+    "\n",
     "formula = 'TOTAL_DAMAGE ~ population + DURATION + rank_1_biz_val + rank_2_biz_val + rank_3_biz_val'\n",
-    "reg = smf.ols(formula = formula, data = cat1_df).fit(maxiter=10000)\n",
+    "reg = smf.ols(formula = formula, data = df).fit(maxiter=10000)\n",
     "head = reg.summary().tables[0]\n",
     "body = reg.summary().tables[1]\n",
     "print(head)\n",
@@ -378,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "c3d8f41f",
    "metadata": {},
    "outputs": [
@@ -391,31 +435,36 @@
       "Dep. Variable:           TOTAL_DAMAGE   R-squared:                       0.086\n",
       "Model:                            OLS   Adj. R-squared:                  0.082\n",
       "Method:                 Least Squares   F-statistic:                     21.78\n",
-      "Date:                Fri, 17 Sep 2021   Prob (F-statistic):           2.88e-28\n",
-      "Time:                        23:39:53   Log-Likelihood:                -32620.\n",
-      "No. Observations:                1627   AIC:                         6.526e+04\n",
-      "Df Residuals:                    1619   BIC:                         6.530e+04\n",
+      "Date:                Sat, 18 Sep 2021   Prob (F-statistic):           2.88e-28\n",
+      "Time:                        18:39:45   Log-Likelihood:                -2235.4\n",
+      "No. Observations:                1627   AIC:                             4487.\n",
+      "Df Residuals:                    1619   BIC:                             4530.\n",
       "Df Model:                           7                                         \n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================\n",
       "===================================================================================\n",
       "                      coef    std err          t      P>|t|      [0.025      0.975]\n",
       "-----------------------------------------------------------------------------------\n",
-      "Intercept       -5.947e+07   7.99e+06     -7.442      0.000   -7.51e+07   -4.38e+07\n",
-      "population        121.5054     29.698      4.091      0.000      63.254     179.757\n",
-      "DURATION         4.724e+05   3.04e+05      1.553      0.121   -1.24e+05    1.07e+06\n",
-      "Tornado_f_scale  2.457e+07   3.77e+06      6.514      0.000    1.72e+07     3.2e+07\n",
-      "Tornado_width    2.757e+04   6813.097      4.046      0.000    1.42e+04    4.09e+04\n",
-      "rank_1_biz_val     -0.2428      0.345     -0.704      0.481      -0.919       0.434\n",
-      "rank_2_biz_val     -0.7661      1.095     -0.700      0.484      -2.914       1.382\n",
-      "rank_3_biz_val     -3.0884      2.225     -1.388      0.165      -7.453       1.276\n",
+      "Intercept        3.469e-18      0.024   1.46e-16      1.000      -0.047       0.047\n",
+      "population          0.3516      0.086      4.091      0.000       0.183       0.520\n",
+      "DURATION            0.0407      0.026      1.553      0.121      -0.011       0.092\n",
+      "Tornado_f_scale     0.1795      0.028      6.514      0.000       0.125       0.234\n",
+      "Tornado_width       0.1118      0.028      4.046      0.000       0.058       0.166\n",
+      "rank_1_biz_val     -0.0347      0.049     -0.704      0.481      -0.131       0.062\n",
+      "rank_2_biz_val     -0.0526      0.075     -0.700      0.484      -0.200       0.095\n",
+      "rank_3_biz_val     -0.1380      0.099     -1.388      0.165      -0.333       0.057\n",
       "===================================================================================\n"
      ]
     }
    ],
    "source": [
+    "lst_cols_tornado = lst_cols + ['Tornado_f_scale', 'Tornado_width']\n",
+    "\n",
+    "df = cat2_df[lst_cols_tornado].copy()\n",
+    "df = apply_scaling(df)\n",
+    "\n",
     "formula = 'TOTAL_DAMAGE ~ population + DURATION + Tornado_f_scale + Tornado_width + rank_1_biz_val + rank_2_biz_val + rank_3_biz_val'\n",
-    "reg = smf.ols(formula = formula, data = cat2_df).fit(maxiter=10000)\n",
+    "reg = smf.ols(formula = formula, data = df).fit(maxiter=10000)\n",
     "head = reg.summary().tables[0]\n",
     "body = reg.summary().tables[1]\n",
     "print(head)\n",
@@ -432,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "9c5bdb3d",
    "metadata": {},
    "outputs": [
@@ -442,31 +491,34 @@
      "text": [
       "                            OLS Regression Results                            \n",
       "==============================================================================\n",
-      "Dep. Variable:           TOTAL_DAMAGE   R-squared:                       0.009\n",
-      "Model:                            OLS   Adj. R-squared:                  0.008\n",
-      "Method:                 Least Squares   F-statistic:                     10.93\n",
-      "Date:                Fri, 17 Sep 2021   Prob (F-statistic):           7.94e-09\n",
-      "Time:                        23:43:35   Log-Likelihood:            -1.0906e+05\n",
-      "No. Observations:                5052   AIC:                         2.181e+05\n",
-      "Df Residuals:                    5047   BIC:                         2.182e+05\n",
+      "Dep. Variable:           TOTAL_DAMAGE   R-squared:                       0.001\n",
+      "Model:                            OLS   Adj. R-squared:                 -0.001\n",
+      "Method:                 Least Squares   F-statistic:                    0.4860\n",
+      "Date:                Sat, 18 Sep 2021   Prob (F-statistic):              0.746\n",
+      "Time:                        18:43:15   Log-Likelihood:                -2468.0\n",
+      "No. Observations:                1740   AIC:                             4946.\n",
+      "Df Residuals:                    1735   BIC:                             4973.\n",
       "Df Model:                           4                                         \n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================\n",
       "==================================================================================\n",
       "                     coef    std err          t      P>|t|      [0.025      0.975]\n",
       "----------------------------------------------------------------------------------\n",
-      "Intercept        5.51e+07   9.77e+06      5.640      0.000     3.6e+07    7.43e+07\n",
-      "population        31.7052     28.297      1.120      0.263     -23.770      87.180\n",
-      "DURATION        -676.9872    804.809     -0.841      0.400   -2254.761     900.787\n",
-      "rank_1_biz_val     2.2672      0.646      3.508      0.000       1.000       3.534\n",
-      "rank_2_biz_val    -1.9508      1.500     -1.300      0.194      -4.892       0.991\n",
+      "Intercept       2.776e-17      0.024   1.16e-15      1.000      -0.047       0.047\n",
+      "population         0.1078      0.112      0.960      0.337      -0.112       0.328\n",
+      "DURATION          -0.0134      0.024     -0.552      0.581      -0.061       0.034\n",
+      "rank_1_biz_val    -0.0159      0.050     -0.316      0.752      -0.114       0.083\n",
+      "rank_2_biz_val    -0.0742      0.116     -0.642      0.521      -0.301       0.152\n",
       "==================================================================================\n"
      ]
     }
    ],
    "source": [
+    "df = cat3_df[lst_cols].copy()\n",
+    "df = apply_scaling(df)\n",
+    "\n",
     "formula = 'TOTAL_DAMAGE ~ population + DURATION + rank_1_biz_val + rank_2_biz_val'\n",
-    "reg = smf.ols(formula = formula, data = cat1_df).fit(maxiter=10000)\n",
+    "reg = smf.ols(formula = formula, data = df).fit(maxiter=10000)\n",
     "head = reg.summary().tables[0]\n",
     "body = reg.summary().tables[1]\n",
     "print(head)\n",
@@ -508,34 +560,6 @@
     "X_train_cat1, X_test_cat1, y_train_cat1, y_test_cat1 = train_test_split(df_train_cat1, y_cat1, random_state=42)\n",
     "X_train_cat2, X_test_cat2, y_train_cat2, y_test_cat2 = train_test_split(df_train_cat2, y_cat2, random_state=42)\n",
     "X_train_cat3, X_test_cat3, y_train_cat3, y_test_cat3 = train_test_split(df_train_cat3, y_cat3, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "1aadc6ff",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X_train_cat1 (0, 20)\n",
-      "X_train_cat2 (0, 22)\n",
-      "X_train_cat3 (0, 20)\n",
-      "X_test_cat1 (0, 20)\n",
-      "X_test_cat2 (0, 22)\n",
-      "X_test_cat3 (0, 20)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('X_train_cat1', X_train_cat1[X_train_cat1.isna().any(axis=1)].shape)\n",
-    "print('X_train_cat2', X_train_cat2[X_train_cat2.isna().any(axis=1)].shape)\n",
-    "print('X_train_cat3', X_train_cat3[X_train_cat3.isna().any(axis=1)].shape)\n",
-    "print('X_test_cat1', X_test_cat1[X_test_cat1.isna().any(axis=1)].shape)\n",
-    "print('X_test_cat2', X_test_cat2[X_test_cat2.isna().any(axis=1)].shape)\n",
-    "print('X_test_cat3', X_test_cat3[X_test_cat3.isna().any(axis=1)].shape)"
    ]
   },
   {
@@ -666,32 +690,6 @@
     "clf.fit(X_train_cat1, y_train_cat1)\n",
     "print(clf.coef_)\n",
     "clf.score(X_test_cat1, y_test_cat1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "68587101",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['TOTAL_DAMAGE', 'EVENT_TYPE', 'DURATION', 'population', 'num_estab',\n",
-       "       'annual_payroll', 'num_emp', 'num_non_emp_estb', 'non_emp_revenue',\n",
-       "       'rank_1_ind', 'rank_1_biz_val', 'rank_1_estab', 'rank_1_emp',\n",
-       "       'rank_2_ind', 'rank_2_biz_val', 'rank_2_estab', 'rank_2_emp',\n",
-       "       'rank_3_ind', 'rank_3_biz_val', 'rank_3_estab', 'rank_3_emp'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cat1_df.columns"
    ]
   }
  ],
